--- a/misc/admin.css
+++ b/misc/admin.css
@@ -203,6 +203,9 @@ table.dataset {
         color: #fff;
         text-align: left;
     }
+        table.dataset th a {
+            color: #fff200;
+        }
     table.dataset tr.select td {
         background: #e7f2ff;
     }
