fix: Исправлен небольшой notice в новостях fix: Улучшена сортировка товаров каталога add: Начата разработка модуля комментариев add: В модель добавлено название таблицы add: В моделе определен метод find по умолчанию. Он будет производить поиск по id в таблице, которая указана в свойстве $this->table fix: Подправлены стили для админки каталога add: Доработан javascript файл админки для каталога. Добавлена кастомная сортировка товаров. fix: обновлены шаблоны каталога fix: в виджете формы логина исправлено подключение шаблона fix: небольшие доработки .htaccess

--- a/misc/admin.css
+++ b/misc/admin.css
@@ -203,15 +203,17 @@ table.dataset {
         color: #fff;
         text-align: left;
     }
-        table.dataset th a {
-            color: #fff200;
-        }
     table.dataset tr.select td {
         background: #e7f2ff;
     }
 
-table.dataset tr.cat {
-    cursor: s-resize;
+
+.catalog_data input.trade_pos {
+    width:50px;
+    text-align:right;
+}
+.catalog_data td.trade_pos {
+    width:50px;
 }
 
 
