upd: Подключение TinyMCE к системе и интергация ElFinder upd: Исправление стиля block-feedback

--- a/misc/admin/admin.css
+++ b/misc/admin/admin.css
@@ -57,6 +57,10 @@ div.b-request-feedback {
     color: #333;
 }
 
+.blockMsg div.feedback {
+    margin: 0;
+}
+
 div.l-wrapper {
     min-height: 100%;
     min-width: 1000px;
