add: В драйвер шаблона добавлена фабрика создания Хлебных крошек add: Модуль корзины выводит хлебные крошки add: Добавлен класс Assets для подключения внешних JS и CSS upd: Файловый менеджер открывается в JUI Dialog вместо fancybox

--- a/misc/elfinder/css/elfinder.css
+++ b/misc/elfinder/css/elfinder.css
@@ -2,7 +2,7 @@
 /* file manager window */
 
 .el-finder {
-	width:100%; 
+	/*width:100%; */
 	min-width:400px;
 	border:1px solid #ccc;
 	background-color:#eee;
