fix: Исправление работы модуля каталога fix: Исправление работы модуля новостей upd: Критерия понимает поле 'condition' add: Добавление некоторых методов работы с альясами upd: Контроль системных запросов перенесен в Резолвер контроллеров upd: Модификация Request для более корретного возврата чисел upd: Переработка виджета {href} по-умолчанию url будет принимать значение NULL

--- a/misc/admin/admin.css
+++ b/misc/admin/admin.css
@@ -36,6 +36,12 @@ small, span.small {
     font-size: 10px;
 }
 
+fieldset {
+    border: 1px #ddd solid;
+    border-radius: 0.5em;
+    padding: 1em;
+    margin-bottom: 1em;
+}
 
 
 div.ui-tabs ul {
