Corrected algoritm Model_Catalog::getSelectTree() Downgrade jQuery to 1.6.4, with 1.7 many scripts crashed (jq.forms, elFinder) Class SysConfig renamed to Sfcms_Config, moved under Sfcms namespace Second view (layout) some fixing Disable archive opportunity from elFinder

--- a/misc/admin/admin.css
+++ b/misc/admin/admin.css
@@ -279,6 +279,13 @@ form.standart input.checkbox {
 form.standart input.datepicker {
     width: 80px;
 }
+form.standart input.image {
+    background-image: url("/images/admin/icons/picture.png");
+    background-position: 99% 2px;
+    background-repeat: no-repeat;
+}
+
+
 
     div.b-form-field {
         margin-bottom: 1em;
