--- a/themes/basic/css/style.css
+++ b/themes/basic/css/style.css
@@ -2,7 +2,7 @@
 
 html, body {
     /*height: 100%;*/
-    font: 14px tahoma;
+    font: 14px 'Helvetica',sans;
 }
 
 h1, h2, h3, h4, h5, h6, p { margin-top: 0; }
