#sf43 Fixed Исправлена ошибка выбрасывания ошибки 404 если не найден контроллер. Удален метод action404 из Controller_Page  #sf-42 Fixed Добавлен rjs-модуль для работы с jqGrid.  Добавлен JqGrid-Provider для связи Sfcms и jqGrid.

--- a/misc/admin/admin.css
+++ b/misc/admin/admin.css
@@ -229,3 +229,20 @@ div.siteforeverModal {
     margin-left: -475px;
 }
 
+.ui-jqgrid .ui-jqgrid-btable th,
+.ui-jqgrid .ui-jqgrid-btable td,
+.ui-jqgrid .ui-jqgrid-sortable,
+.ui-jqgrid .ui-pg-table td {
+    font: 12px Verdana;
+}
+.ui-jqgrid tr.jqgrow td {
+    padding: 5px 10px !important;
+}
+.ui-jqgrid .ui-pg-table input,
+.ui-jqgrid .ui-pg-table select {
+    width: auto;
+    height: 16px !important;
+    line-height: 16px;
+    padding: 0;
+}
+.ui-jqgrid .ui-pg-button:hover { padding: 1px 0 0 1px !important; }
