--- a/misc/admin/admin.css
+++ b/misc/admin/admin.css
@@ -235,6 +235,12 @@ div.siteforeverModal {
 .ui-jqgrid .ui-pg-table td {
     font: 12px Verdana;
 }
+.ui-jqgrid .ui-jqgrid-btable a {
+    text-decoration: underline;
+}
+.ui-jqgrid .ui-jqgrid-htable th {
+    height: 35px !important;
+}
 .ui-jqgrid tr.jqgrow td {
     padding: 5px 10px !important;
 }
