Исправления косков в заказе и доставке. Оптимизация вывода товаров. Добавлен функционал водяных знаков к изображениям товаров. Добавлен но не интегрирован свежий ElFinder. Добавлена возможность вешать кастомный callback на добавление товара в корзину.

--- a/misc/admin/admin.css
+++ b/misc/admin/admin.css
@@ -227,6 +227,8 @@ input.image {
 div.siteforeverModal {
     width: 950px;
     margin-left: -475px;
+    /*height: 80%;*/
+    /*margin-top: -20%;*/
 }
 
 .ui-jqgrid .ui-jqgrid-btable th,
