#sf-46 fixed Методы быстрого доступа к св-вам товаров #sf-47 fixed Список модулей хранится в базе sf-48 fixed Поддержка формата выгрузки в Yandex -YML sf-50 fixed Разбить siteforever.js на отдельные модули sf-51 fixed Механизм js behavior вынести в отдельный модуль

--- a/misc/admin/admin.css
+++ b/misc/admin/admin.css
@@ -35,6 +35,19 @@ small {
     font-size: 80% !important;
 }
 
+
+#loading-application {
+    position: absolute;
+}
+    #loading-application div {
+        position: relative;
+        top: 50%;
+        margin-top: -0.5em;
+        text-align: center;
+        font-size: 30px;
+        color: #fff;
+    }
+
 .form-horizontal .control-group {
     margin-bottom: 10px;
 }
