--- a/misc/module/catalog.css
+++ b/misc/module/catalog.css
@@ -3,6 +3,8 @@
  * Файл стилей для каталога по умолчанию
  * @author Nikolay Ermin <nikolay@ermin.ru>
  * @link http://ermin.ru
+ *
+ * @deprecated
  */
 
 .b-catalog-product {
