resolved #7  Fixed and optimized ORM. Fix admin panel of goods. Fix admin panel of gallery. Fix watcher. Fix request, based on symfony components. Optimized select products for output on frontend. Fix banners module. Introduced support for cascading eager loading of objects through "with" property in relation configuration.  Fixed many small bugs.

--- a/misc/admin/admin.css
+++ b/misc/admin/admin.css
@@ -37,7 +37,7 @@ small {
 
 
 #loading-application {
-    position: absolute;
+    position: fixed;
 }
     #loading-application div {
         position: relative;
@@ -324,6 +324,7 @@ fieldset legend {
 .ui-widget-overlay {
     background: #000;
     opacity: .8;
+    position: fixed;
 }
 
 #searchcntfbox_products_list select {
