--- a/themes/basic/css/style.css
+++ b/themes/basic/css/style.css
@@ -44,6 +44,10 @@ body {
     margin-bottom: -70px;
 }
 
+body * {
+    text-align: left;
+}
+
     .contaiter {
         width: 1000px;
         max-width: 1200px;
@@ -58,10 +62,6 @@ body {
         text-align: left;
         margin: 0 auto;
     }
-
-/*input[type="text"], input[type="password"], input[type="datetime"], input[type="datetime-local"], input[type="date"], input[type="month"], input[type="time"], input[type="week"], input[type="number"], input[type="email"], input[type="url"], input[type="search"], input[type="tel"], input[type="color"], .uneditable-input {*/
-    /*height: 17px;*/
-/*}*/
 
 .captcha-reload {
     border-bottom: 1px #000 dashed;
@@ -88,11 +88,6 @@ body {
         display: block;
         height: 30px;
         padding-left: 10px;
-        /*border: 1px solid #247d06;
-        -moz-border-radius: 10px;
-        -webkit-border-radius: 10px;
-        border-radius: 10px;
-        background: #E9F4E7;*/
     }
 
         .b-menu ul li {
