#sf-61 fixed Заголовок в каталоге #sf-62 fixed Перевод формы админки товара #sf-63 fixed Перевод ошибок формы

--- a/themes/basic/css/style.css
+++ b/themes/basic/css/style.css
@@ -74,9 +74,14 @@ body * {
     height: 65px;
     float: left;
 }
-.b-header {
-    height: 65px;
-    margin-bottom: 20px;
+
+.navbar .brand {
+    padding: 0;
+}
+.navbar ul.nav {
+    padding: 12px 0;
+    white-space: nowrap;
+    float: none;
 }
 
 .b-menu {
