create test bootstrap3 theme; manual including static files in templates

--- a/themes/bootstrap/less/style.less
+++ b/themes/bootstrap/less/style.less
@@ -1,3 +1,14 @@
 @import "twbs/bootstrap.less";
 @import "twbs/theme.less";
 
+header {
+  display: block;
+  height: 65px;
+  a.logo {
+    display: block;
+    width: 125px;
+    height: 65px;
+    background: url("../img/siteforever.png") no-repeat;
+    outline: none;
+  }
+}
