--- a/themes/basic/css/style.css
+++ b/themes/basic/css/style.css
@@ -1,5 +1,6 @@
-@CHARSET "UTF-8";
-
+/*!
+ * SiteForeverCMS styles
+ */
 html, body {
     /*height: 100%;*/
     font: 14px 'Helvetica',sans;
@@ -48,7 +49,7 @@ body * {
     text-align: left;
 }
 
-    .contaiter {
+    .container {
         width: 1000px;
         max-width: 1200px;
         text-align: left;
