fix assets writing

--- a/themes/bootstrap/less/style.less
+++ b/themes/bootstrap/less/style.less
@@ -1,5 +1,7 @@
-@import "twbs/bootstrap.less";
-@import "twbs/theme.less";
+@import "../../../vendor/twbs/bootstrap/less/bootstrap";
+@import "../../../vendor/twbs/bootstrap/less/theme";
+//@import "twbs/bootstrap.less";
+//@import "twbs/theme.less";
 
 header {
   display: block;
