--- a/class/Module/System/static/admin.css
+++ b/class/Module/System/static/admin.css
@@ -36,6 +36,14 @@ table td.bottom {
     vertical-align: bottom;
 }
 
+.ui-dialog-content>form {
+    padding: 0 30px;
+}
+
+.clear {
+    clear: both;
+}
+
 input.cke_dialog_ui_input_text {
     /*height: 14px !important;*/
     margin: 0 !important;
