--- a/class/Module/System/static/admin.less
+++ b/class/Module/System/static/admin.less
@@ -5,6 +5,12 @@
 @font-size-base: 12px;
 
 //body { margin-top: 70px; }
+html.overflow_hidden {
+    overflow: hidden;
+    body {
+        overflow: hidden;
+    }
+}
 
 .growlUI {
     h1 {
