fix date picker bug

--- a/class/Module/System/static/admin.less
+++ b/class/Module/System/static/admin.less
@@ -4,6 +4,10 @@
 @font-family-sans-serif:  Arial, Helvetica, sans-serif;
 @font-size-base: 12px;
 
+@border-radius-base:        0;
+@border-radius-large:       0;
+@border-radius-small:       0;
+
 //body { margin-top: 70px; }
 html.overflow_hidden {
     overflow: hidden;
